--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -27,4 +27,22 @@
   <section class="body" itemprop="articleBody">
     {{ .Content }}
   </section>
+  <section class="body" style="margin-top: 2rem;">
+<!-- 多说评论框 start -->
+<div class="ds-thread" data-thread-key="{{ .Title }}" data-title="{{ .Title }}" data-url="{{ .Site.BaseURL }}{{ .Date.Format "2006/01/02" }}{{ .Title }}"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"homfenblog"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
+  </section>
 </article>
