--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,5 +7,17 @@
   </div>
 </footer>
 
+<script src="//static.homfen.me/plugin/highlight.js/dist/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?ea23518b0514a7b24922188359137040";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </body>
 </html>
