--- a/static/css/style.css
+++ b/static/css/style.css
@@ -510,3 +510,7 @@ pre { background: #2d2d2d; color: #f2f0ec }
 .highlight .vg { color: #f2777a } /* Name.Variable.Global */
 .highlight .vi { color: #f2777a } /* Name.Variable.Instance */
 .highlight .il { color: #f99157 } /* Literal.Number.Integer.Long */
+
+.hljs {
+    background: none;
+}
