--- a/static/css/style.css
+++ b/static/css/style.css
@@ -520,6 +520,16 @@ article.single pre {
     overflow: hidden;
 }
 
+.headline {
+    position: relative;
+}
+
+.headline .meta {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
 code::-webkit-scrollbar {
     height: 8px;
 }
