--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -6,7 +6,7 @@
   <h1 class="headline">
       Recent Posts
       <div class="meta">
-          <a href="/post"><span class="val">All posts</span></a>
+          <a href="/post"><span class="val">All Posts >>></span></a>
       </div>
   </h1>
 
