--- a/static/css/style.css
+++ b/static/css/style.css
@@ -527,9 +527,7 @@ article.single pre {
 .headline .meta {
     font-size: 16px;
     line-height: 1.8rem;
-    position: absolute;
-    right: 0;
-    top: 0;
+    text-align: right;
 }
 
 .headline .meta a {
