--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -29,7 +29,7 @@
   </section>
   <section class="body" style="margin-top: 2rem;">
 <!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="{{ .Title }}" data-title="{{ .Title }}" data-url="{{ .Site.BaseURL }}{{ .Date.Format "2006/01/02" }}{{ .Title }}"></div>
+<div class="ds-thread" data-thread-key="{{ .Title }}" data-title="{{ .Title }}" data-url="{{ .Site.BaseURL }}{{ .Date.Format "2006/01/02" }}/{{ .Title }}"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
