--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
 
     {{ partial "hero.html" . }}
 
-    <h1 class="headline">Archives</h1>
+    <h1 class="list-title">{{ .Title }}</h1>
 
     <div class="article-list">
         <article class="list-item" itemscope itemtype="http://schema.org/Blog">
