--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -28,21 +28,19 @@
     {{ .Content }}
   </section>
   <section class="body" style="margin-top: 2rem;">
-<!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="{{ .Title }}" data-title="{{ .Title }}" data-url="{{ .Site.BaseURL }}{{ .Date.Format "2006/01/02" }}/{{ .Title }}"></div>
-<!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"homfenblog"};
-	(function() {
-		var ds = document.createElement('script');
-		ds.type = 'text/javascript';ds.async = true;
-		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-		ds.charset = 'UTF-8';
-		(document.getElementsByTagName('head')[0] 
-		 || document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
-	</script>
-<!-- 多说公共JS代码 end -->
+    <div id="disqus_thread"></div>
+    <script>
+    var disqus_config = function () {
+        this.page.url = '{{ .Site.BaseURL }}{{ .Date.Format "2006/01/02" }}/{{ .Title }}';
+        this.page.identifier = '{{ .Title }}';
+    };
+    (function() {
+    var d = document, s = d.createElement('script');
+    s.src = '//homfensblog.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </section>
 </article>
