--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -46,4 +46,22 @@
 
 {{ end }}
 
+  <h1 class="headline">Friends</h1>
+
+  <section class="tags">
+    <span class="tag">
+      <a href="http://huajh.github.io">Huajh7</a>
+    </span>
+    <span class="tag">
+      <a href="http://www.fmjhome.com">FMJ</a>
+    </span>
+    <span class="tag">
+      <a href="https://pacoirene.herokuapp.com/">Pacoirene</a>
+    </span>
+    <span class="tag">
+      <a href="http://blackboy.me">Blackboy</a>
+    </span>
+  </section>
+
+
 </main>
