--- a/static/css/style.css
+++ b/static/css/style.css
@@ -555,3 +555,9 @@ code::-webkit-scrollbar-thumb {
     border: 1px solid slategrey;
     border-radius: 4px;
 }
+
+.all-posts{
+    color: #6699cc;
+    padding: 1em 0;
+    text-align: right;
+}
