--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -51,16 +51,16 @@
 
   <section class="tags">
     <span class="tag">
-      <a href="http://huajh.github.io">Huajh7</a>
+      <a href="http://huajh.github.io" target="_blank">Huajh7</a>
     </span>
     <span class="tag">
-      <a href="http://www.fmjhome.com">FMJ</a>
+      <a href="http://www.fmjhome.com" target="_blank">FMJ</a>
     </span>
     <span class="tag">
-      <a href="https://pacoirene.herokuapp.com/">Pacoirene</a>
+      <a href="https://pacoirene.herokuapp.com/" target="_blank">Pacoirene</a>
     </span>
     <span class="tag">
-      <a href="http://blackboy.me">Blackboy</a>
+      <a href="http://blackboy.me" target="_blank">Blackboy</a>
     </span>
   </section>
 
