--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -51,7 +51,7 @@
 
   <section class="tags">
     <span class="tag">
-      <a href="http://huajh.github.io" target="_blank">Huajh7</a>
+      <a href="http://huajh7.github.io" target="_blank">Huajh7</a>
     </span>
     <span class="tag">
       <a href="http://www.fmjhome.com" target="_blank">FMJ</a>
