--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
   </div>
 </footer>
 
-<script src="//static.homfen.me/plugin/highlight.js/dist/highlight.pack.js"></script>
+<script src="{{ "/static/plugin/highlight/highlight.pack.js" | absURL }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script>
 var _hmt = _hmt || [];
