--- a/static/css/style.css
+++ b/static/css/style.css
@@ -351,8 +351,8 @@ article.single pre {
 }
 
 article.single p code {
-  padding: 0.2em 0.5em;
-  border-radius: 3px;
+  padding: 0 0.3em;
+  border-radius: 4px;
   background: #747369;
   color: #f2f0ec;
 }
