article body line-height

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -314,6 +314,7 @@ article.single section.body {
   padding-top: 4rem;
   padding-bottom: 48px;
   padding-bottom: 3rem;
+  line-height: 2em;
 }
 
 article.single section.body p img{
