--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,11 +8,14 @@
     <h1 class="list-title">{{ .Title }}</h1>
 
     <div class="article-list">
-        <article class="list-item" itemscope itemtype="http://schema.org/Blog">
-        {{ range .Data.Pages }}
-            {{ partial "archive-item.html" . }}
+        {{ range .Data.Pages.GroupByDate "2006" }}
+            <h2>--{{ .Key }}:</h2>
+            <article class="list-item" itemscope itemtype="http://schema.org/Blog">
+            {{ range .Pages }}
+                {{ partial "archive-item.html" . }}
+            {{ end }}
+            </article>
         {{ end }}
-        </article>
     </div>
 
 </main>
