--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -35,9 +35,9 @@
     <div id="disqus_thread"></div>
     <script>
     var disqus_config = function () {
-        this.page.url = 'https:{{ .Site.BaseURL }}{{ .URL }}';
+        this.page.url = 'https:{{ .Site.BaseURL }}{{ .RelPermalink }}';
         this.page.title = '{{  .Title }}';
-        this.page.identifier = '{{ .UniqueID }}';
+        this.page.identifier = '{{ .File.UniqueID }}';
     };
     (function() {
     var d = document, s = d.createElement('script');
