--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
 <meta name="description" content="{{ if eq .Description "" }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}">
 <meta name="keywords" content="{{ delimit .Keywords  "," }}">
 <meta name="author" content="{{ .Site.Params.author }}">
-{{ .Hugo.Generator }}
+{{ hugo.Generator }}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="{{ "/images/favicon.ico" | absURL }}">
 <link rel="stylesheet" href="{{ "/css/sourcecodepro.css" | absURL }}" type="text/css">
